[workspace]
members = [
    "render-engine",
    "wasm-wrapper",
]
resolver = "2"

# Shared dependencies and configuration across workspace members
[workspace.dependencies]
typst = "0.13"
typst-pdf = "0.13" 
typst-svg = "0.13"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
thiserror = "1.0.69"
comemo = "0.5"

# Common profile settings for all workspace members
[profile.dev]
opt-level = 0
debug = 1
incremental = true
lto = false
codegen-units = 256
panic = "unwind"

# Standard release optimizations
[profile.release]
opt-level = "s"           # Standard optimization for performance
lto = true              # Enable Link Time Optimization
codegen-units = 1       # Reduce parallel code generation for better optimization
panic = "abort"         # Don't include unwinding code
strip = true           # Strip debug info