[package]
name = "render-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
typst = "0.13"
typst-pdf = "0.13"
typst-svg = "0.13"
thiserror = "1.0.69"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jsonschema = "0.33.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Use jsonschema on WASM but disable default features (file/http resolvers)
jsonschema = { version = "0.33.0", default-features = false }
