[package]
name = "render-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
typst = "0.13"
typst-pdf = "0.13"
typst-svg = "0.13"
thiserror = "1.0.69"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jsonschema = "0.33.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Use jsonschema on WASM but disable default features (file/http resolvers)
jsonschema = { version = "0.33.0", default-features = false }

[features]
default = []
debug = []

[profile.dev]
opt-level = 0
debug = 1
incremental = true
lto = false
codegen-units = 256
panic = "unwind"

# Standard release optimizations
[profile.release]
opt-level = "s"           # Standard optimization for performance
lto = true              # Enable Link Time Optimization
codegen-units = 1       # Reduce parallel code generation for better optimization
panic = "abort"         # Don't include unwinding code
strip = true           # Strip debug info
