[package]
name = "wasm-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
render-engine = { path = "../render-engine" }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]
debug = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false